--- a/Graded_Unit_VS/Graded_Unit_VS.vcxproj
+++ b/Graded_Unit_VS/Graded_Unit_VS.vcxproj
@@ -20,6 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetManager.cpp" />
+    <ClCompile Include="Block.cpp" />
+    <ClCompile Include="Easing.cpp" />
+    <ClCompile Include="EndPanel.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LevelScreen.cpp" />
@@ -32,6 +35,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
+    <ClInclude Include="Block.h" />
+    <ClInclude Include="Easing.h" />
+    <ClInclude Include="EndPanel.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="LevelScreen.h" />
