--- a/Graded_Unit_VS/Graded_Unit_VS.vcxproj
+++ b/Graded_Unit_VS/Graded_Unit_VS.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="EndPanel.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="HealthItem.cpp" />
     <ClCompile Include="LevelScreen.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="EndPanel.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="HealthItem.h" />
     <ClInclude Include="LevelScreen.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
