--- a/Graded_Unit_VS/Graded_Unit_VS.vcxproj.filters
+++ b/Graded_Unit_VS/Graded_Unit_VS.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="AttackBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HealthItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AttackBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HealthItem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
