--- a/Graded_Unit_VS/Graded_Unit_VS.vcxproj
+++ b/Graded_Unit_VS/Graded_Unit_VS.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PowerItem.cpp" />
     <ClCompile Include="Screen.cpp" />
     <ClCompile Include="VectorHelper.cpp" />
   </ItemGroup>
@@ -46,6 +47,7 @@
     <ClInclude Include="LevelScreen.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PowerItem.h" />
     <ClInclude Include="Screen.h" />
     <ClInclude Include="VectorHelper.h" />
   </ItemGroup>
